<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_sort_date" android:title="By Date" />
            <item android:id="@+id/action_sort_priority" android:title="By Priority" />
            <item android:id="@+id/action_sort_title" android:title="By Title" />
        </menu>
    </item>

    <item
        android:id="@+id/action_delete_completed"
        android:title="@string/delete_completed"
        app:showAsAction="never" />

</menu>
